--- a/index.html
+++ b/index.html
@@ -7,57 +7,50 @@
     <title>BattleDev3</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
 
     <div id="head">
+        <a id="logo" href=""><img src="nav__brand.svg" alt=""></a>
         <ul>
-            <a id="logo" href=""><img src="nav__brand.svg" alt=""></a>
             <li><a href="">Notre Equipe</a></li>
             <li><a href="">Nos Serrures</a></li>
             <li><a href="">Nous Contacter</a></li>
         </ul>
 
-        <center style="color: aliceblue;">
-
-            <h3>Dites adieux aux voleurs</h3>
-            Avec SenLock, vos portes n'ont jamais été aussi robuste. Vous pouvez <br> vous reposer, on se charge du reste.
-            </p>
-        </center>
+        <h3 class="center ent1">Dites adieux aux voleurs</h3>
+        <p class="paraFont center">Avec SenLock, vos portes n'ont jamais été aussi robuste. Vous pouvez <br> vous reposer, on se charge du reste.</p>
     </div>
 
 
 
-
-    <center>
-        <div id="container">
-            <div id="left">
-                <i class="fa fa-lock" aria-hidden="true"></i>
-                <h3>Sécurité garantie</h3>
-                Nous utilisons un système super sophistiqué pour assurer votre protection.
-            </div>
-            <div id="center">
-                <i class="fa fa-bolt w3-xxlarge" aria-hidden="true"></i>
-                <h3>Facile d'utilisation</h3>
-                La mise en place de nos produits n'est pas compliqué. Quelques secondes suffisent.
-            </div>
-            <div id="right">
-                <i class="fa fa-smile-o" aria-hidden="true"></i>
-                <h3>Satifaction garantie</h3>
-                Une fois que vous aurez essayé nos produits vous ne vous en lasserez plus.
-            </div>
+    <div class="center" id="container">
+        <div id="left"><br>
+            <i class="fa fa-lock fa-3x" aria-hidden="true"></i>
+            <h3>Sécurité garantie</h3>
+            <span class="paraFont spanText"> Nous utilisons un système super sophistiqué pour assurer votre protection.</span>
         </div>
-
-        <div>
-            <p>
-                <h3>Commandez Maintenant</h3>
-                Cela ne va vous prendre que quelques minutes. Il suffit juste <br> de préciser votre email.
-            </p>
-            <input id="input1" type="text">&nbsp;&nbsp;<input type="button" value="Commander">
+        <div id="center"><br>
+            <i class="fa fa-bolt fa-3x" aria-hidden="true"></i>
+            <h3>Facile d'utilisation</h3>
+            <span class="paraFont spanText">La mise en place de nos produits n'est pas compliqué. Quelques secondes suffisent.</span>
         </div>
-    </center>
+        <div id="right"><br>
+            <i class="fa fa-smile-o fa-3x" aria-hidden="true"></i>
+            <h3>Satifaction garantie</h3>
+            <span class="paraFont spanText">Une fois que vous aurez essayé nos produits vous ne vous en lasserez plus.</span>
+        </div>
+    </div>
+
+    <div class="center" id="Lsection">
+        <p>
+            <h3>Commandez Maintenant</h3>
+            <span class="paraFont spanText1">Cela ne va vous prendre que quelques minutes. Il suffit juste <br> de préciser votre email.</span>
+        </p>
+        <input id="input1" type="text">&nbsp;&nbsp;<input type="button" value="Commander">
+    </div>
 </body>
 
 </html>
