--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
         <h3 class="center ent1">Dites adieux aux voleurs</h3>
         <p class="paraFont center">Avec SenLock, vos portes n'ont jamais été aussi robuste. Vous pouvez <br> vous reposer, on se charge du reste.</p>
     </div>
-
-
-
     <div class="center" id="container">
         <div id="left"><br>
             <i class="fa fa-lock fa-3x" aria-hidden="true"></i>
@@ -49,7 +46,8 @@
             <h3>Commandez Maintenant</h3>
             <span class="paraFont spanText1">Cela ne va vous prendre que quelques minutes. Il suffit juste <br> de préciser votre email.</span>
         </p>
-        <input id="input1" type="text">&nbsp;&nbsp;<input type="button" value="Commander">
+        <input id="input1" type="text" placeholder="email@exemple.sn">
+        <input class="button1" type="button" value="Commander">
     </div>
 </body>
 
